# refamodule

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  README.txt  api.py  conductor.py  conductors_test.csv  index.html  line.py  main.py  methods.py  mkdocs.yml  objects.inv  payload_calculate-feasible-projects.json  payload_congestion_cost.json  project.py  pyproject.toml  refa.py  refa_module_workflow.ipynb  requirements.txt  sitemap.xml  test_module.py  unit_conversion.csv  utils.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/defaults/: index.html
api/line/: index.html
api/projects/: index.html
api/standards/: index.html
changelog/: index.html
conductor_comparison/: refa_results_20260403_125559.json  refa_results_20260407_114947.json
docs/: changelog.md  index.md  installation.md  license.md  quickstart.md
docs/api/: defaults.md  line.md  projects.md  standards.md
docs/user-guide/: Parameter-validation-and-conversion.md  analysis.md  concepts.md  conductor.md  economics.md  environment.md  feasibility.md  line-design.md  line.md  loading.md  parameter-access.md  parameter-unit-system.md  projects.md
examples/: refa_module_workflow.ipynb
input_data_raw/: conductors.csv  conductors_test.csv  mean_price_diff_interRegional_2019-2023_in_$2023_SJ_20250715.csv  multi_year_ave_CAISO_2019_2023_in_$2023_SJ_20250122.csv  multi_year_ave_ISONE_2019_2023_in_$2023_SJ_20250122.csv  multi_year_ave_MISO_2019_2023_in_$2023_SJ_20250122.csv  multi_year_ave_NYISO_2019_2023_in_$2023_SJ_20250122.csv  multi_year_ave_PJM_2019_2023_in_$2023_SJ_20250122.csv  multi_year_ave_SPP_2019_2023_in_$2023_SJ_20250122.csv  parameter_cfg.json
installation/: index.html
license/: index.html
plsxml_/: plsxml.py
quickstart/: index.html
refa/: __init__.py  conductor.py  economics.py  environment.py  line.py  line_design.py  line_structure.py  loading.py  project.py  project_0.py  structure_config.py
refa/defaults/: __init__.py  conductor.py  economics.py  environment.py  structure_config.py
refa/standards/: __init__.py  loading.py
refa_v0/: README.txt  conductors_db.py  line_test.py  line_with_conductor_list.py  methods.py  project.py  structure.py  utils.py
refa_v0/input_data_raw/: multi_year_ave_ERCOT_2019_2023_in_$2023_SJ_20250122.csv  parameter_cfg.json
search/: search_index.json
src/refa/: __init__.py  conductor.py  economics.py  environment.py  line.py  line_design.py  loading.py  project.py  structure_config.py
tests/: conftest.py  test_analysis.py  test_constructors.py  test_feasibility.py  test_line_calculations.py  test_projects.py  test_unit_conversion.py
user-guide/Parameter-validation-and-conversion/: index.html
user-guide/analysis/: index.html
user-guide/concepts/: index.html
user-guide/conductor/: index.html
user-guide/economics/: index.html
user-guide/environment/: index.html
user-guide/feasibility/: index.html
user-guide/line/: index.html
user-guide/line-design/: index.html
user-guide/loading/: index.html
user-guide/parameter-access/: index.html
user-guide/parameter-unit-system/: index.html
user-guide/projects/: index.html
v0/: .gitignore  refa_module_workflow.ipynb  requirements.txt
v0/docs/: index.md
v0/refa/: __init__.py  conductor.py  economics.py  environment.py  line_design.py
(+14 files in other folders)
