[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refa"
dynamic = ["version"]
description = "Techno-economic analysis of capacity upgrade projects in transmission overhead lines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "LBNLgrid" },
]
keywords = ["transmission capacity upgrade", "overhead lines", "reconductoring", "advanced conductors", "ampacity", "sag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "tomli>=1.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://lbnlgrid.github.io/refamodule"
Repository = "https://github.com/LBNLgrid/refamodule"
Issues = "https://github.com/LBNLgrid/refamodule/issues"
Documentation = "https://lbnlgrid.github.io/refamodule"

[tool.setuptools.dynamic]
version = { attr = "refa._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refa = ["data/*.csv", "system_parameters/config.toml"]
